Img overflow fix

--- a/style.css
+++ b/style.css
@@ -17,22 +17,46 @@ body{
     
 }
 .card{
-    position: relative;
     background-color:hsl(216, 50%, 16%) ;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 2rem;
-    min-width: 23rem;
+    max-width: 380px;
     margin-bottom: 20px;
     margin-top: 40px;
+}
+.nft_img{
+    position: relative;
+    border-radius: 1rem;
+}
+.nft_img .view{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: hsl(178, 100%, 50%, 0.5);
+    display: none;
+}
+.nft_img .view svg{
+    position: absolute;
+    width: 50px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.nft_img:hover .view{
+    display: block;
+    border-radius: 1rem;
 }
 
 .image{
     border-radius: 1rem;
-    display: flex;
-    align-items: center;
+    display: block;
+    max-width: 100%;
+    position: relative;
     
     
 }
@@ -56,7 +80,11 @@ body{
     align-content: start;
     gap: 1rem;
 }
-.nft_content h2:hover{
+.nft_content a{
+    text-decoration: none;
+    color: white;
+}
+.nft_content a:hover{
     color: hsl(178, 100%, 50%);
     cursor: pointer;
 }
